# code-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.code-agent/: AGENT.md
.code-agent/agents/: test-global.md
.code-agent/skills/global-demo/: SKILL.md
config/: default.yaml
docs/: P0_FEATURES.md  P0_IMPLEMENTATION_SUMMARY.md
skills/bug-fix/: SKILL.md
skills/code-review/: SKILL.md
src/code_agent/: app.py  cli.py  config.py  schemas.py
src/code_agent/agent/: context.py  prompt_builder.py  runner.py
src/code_agent/agents/: __init__.py  loader.py
src/code_agent/llm/: __init__.py  base.py  mock.py  openai_compatible.py  tongyi.py
src/code_agent/repl/: __init__.py  commands.py  renderer.py  session.py
src/code_agent/safety/: command_guard.py  path_guard.py
src/code_agent/services/: diff_service.py  file_history.py  logging_service.py  session_service.py  session_storage.py
src/code_agent/skills/: __init__.py  loader.py
tests/: manual_test_file_history.py  test_agent_loader.py  test_background_command_tools.py  test_command_guard.py  test_compact_llm.py  test_completion.py  test_config.py  test_context_budget.py  test_diff_tools.py  test_edit_tools.py  test_errors.py  test_explore_agent.py  test_file_history.py  test_file_tools_glob.py  test_model_presets.py  test_path_guard.py  test_plan_tools.py  test_read_file_limits.py  test_runner.py  test_search_tools.py  test_semantic_search.py  test_session_storage.py  test_shell_tools.py  test_skill_loader.py  test_smart_edit_tools.py  test_table_file_tools.py  test_task_tools.py  test_teams.py
(+30 files in other folders)
