[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
description = "A local coding assistant with skills and guarded command execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
ca = "code_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_agent = ["bundled_skills/**/*.md", "agents/bundled/*.md"]
